--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "@material-ui/styles": "^4.1.2",
+    "@microlink/react": "^4.0.1",
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "easy-peasy": "^2.6.5",
@@ -21,7 +22,8 @@
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "styled-components": "^4.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
