--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-lazy-hero": "^2.0.0",
+    "react-markdown": "^4.1.0",
     "react-particles-js": "^2.6.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
