--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "easy-peasy": "^2.6.5",
+    "firebase": "^6.3.0",
     "moment": "^2.24.0",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
