--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "source-map-explorer": "^2.0.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "uuid": "^3.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
