--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^3.7.0",
     "react-lazy-hero": "^2.0.0",
     "react-markdown": "^4.1.0",
+    "react-mde": "^7.6.2",
     "react-particles-js": "^2.6.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
@@ -26,6 +27,7 @@
     "react-scripts": "3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
+    "showdown": "^1.9.0",
     "source-map-explorer": "^2.0.1",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.2"
