--- a/.example.env
+++ b/.example.env
@@ -5,3 +5,5 @@ REACT_APP_FIREBASE_PROJECT_ID="<PROJECT_ID>"
 REACT_APP_FIREBASE_STORAGE_BUCKET="<STORAGE_BUCKET>"
 REACT_APP_FIREBASE_MESSAGING_SENDER_ID= "<MESSAGING_SENDER_ID>"
 REACT_APP_FIREBASE_APP_ID="<APP_ID>"
+REACT_APP_SLACK_AUTH_TOKEN="<TOKEN>"
+REACT_APP_SLACK_URL="https://hooks.slack.com/services/"
