--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^16.8.6",
     "react-icons": "^3.7.0",
     "react-lazy-hero": "^2.0.0",
+    "react-lazy-load-image-component": "^1.3.2",
     "react-markdown": "^4.1.0",
     "react-mde": "^7.6.2",
     "react-particles-js": "^2.6.0",
