--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "react-visibility-sensor": "^5.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "showdown": "^1.9.0",
