--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "showdown": "^1.9.0",
-    "source-map-explorer": "^2.0.1",
     "styled-components": "^4.3.2",
     "uuid": "^3.3.2"
   },
@@ -66,6 +65,7 @@
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.2",
     "eslint-plugin-react-hooks": "^1.6.1",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "source-map-explorer": "^2.0.1"
   }
 }
